# indexer

./: Cargo.toml  README.md  system.json
src/: events.rs  lib.rs  main-indexer.rs  main.rs  migrator.rs  reader.rs
tests/: correct_test.rs  deserialize_test.rs  fetch_test.rs  migrate_test.rs  rest_api_test.rs  speed_test.rs  sync_test.rs
